buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
    }
}

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = project.maven_group
version = project.plugin_version
archivesBaseName = project.archives_base_name

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url "https://www.jetbrains.com/intellij-repository/releases" }
}

dependencies {
    // Choose Julti version: https://jitpack.io/#DuncanRuns/Julti
    implementation 'com.github.DuncanRuns:Julti:v1.4.3'
    // GUI designer
    // compileOnly "com.intellij:forms_rt:7.0.3"

    // Google Sheets API
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.1'
}


processResources {
    inputs.property "version", project.version

    filesMatching("julti.plugin.json") {
        expand "version": project.version
    }
}

// Weird compiled .class files which Julti doesn't like, but aren't necessary ¯\_(ツ)_/¯
shadowJar {
    dependencies {
        exclude 'com/google/common/collect/ImmutableSortedSetFauxverideShim.class'
        exclude 'META-INF/versions/9/module-info.class'
        exclude 'org/apache/commons/logging/impl/ServletContextCleaner.class'
    }
}